@@ -1,21 +1,28 @@
+import base64
 import itertools
 import json
 import pickle
 import re
 import urllib.parse
-
 from functools import partial
-from bs4 import BeautifulSoup, SoupStrainer
+
+from bs4 import BeautifulSoup
 from resources.lib.ui import control, database, client
 from resources.lib.ui.BrowserBase import BrowserBase
 
 
 class Sources(BrowserBase):
-    _BASE_URL = 'https://animixplay.best/' if control.getSetting('provider.animixalt') == 'false' else 'https://animixplay.fun/'
+    _BASE_URL = 'https://animixplay.st/' if control.getBool('provider.animixalt') else 'https://animixplay.name/'
 
     def get_sources(self, mal_id, episode):
         show = database.get_show(mal_id)
         kodi_meta = pickle.loads(show.get('kodi_meta'))
+        srcs = ['sub', 'dub']
+        if control.getSetting('general.source') == 'Sub':
+            srcs.remove('dub')
+        elif control.getSetting('general.source') == 'Dub':
+            srcs.remove('sub')
+        # title = kodi_meta.get('ename') or kodi_meta.get('name')
         title = kodi_meta.get('name')
         title = self._clean_title(title)
 
@@ -24,12 +31,11 @@ class Sources(BrowserBase):
         r = database.get(
             client.request,
             8,
-            self._BASE_URL + 'api/lsearch',
+            self._BASE_URL + 'api/search',
             XHR=True,
             post={'qfast': title},
             headers=headers
         )
-
         soup = BeautifulSoup(json.loads(r).get('result'), 'html.parser')
         items = soup.find_all('a')
         slugs = []
@@ -38,8 +44,12 @@ class Sources(BrowserBase):
             ititle = item.find('p', {'class': 'name'})
             if ititle:
                 ititle = ititle.text.strip()
-                if (ititle.lower() + '  ').startswith(title.lower() + '  '):
-                    slugs.append(item.get('href'))
+                if 'sub' in srcs:
+                    if self.clean_embed_title(ititle) == self.clean_embed_title(title):
+                        slugs.append(item.get('href'))
+                if 'dub' in srcs:
+                    if self.clean_embed_title(ititle) == self.clean_embed_title(title) + 'dub':
+                        slugs.append(item.get('href'))
         if not slugs:
             if len(items) > 0:
                 slugs = [items[0].get('href')]
@@ -53,115 +63,39 @@ class Sources(BrowserBase):
 
     def _process_animixplay(self, slug, title, episode):
         sources = []
-        r = database.get(client.request, 8, slug, referer=self._BASE_URL)
-        eurl = re.search(r'id="showstreambtn"\s*href="([^"]+)', r)
-        if eurl:
-            eurl = eurl.group(1)
-            resp = database.get(client.request, 8, eurl, referer=self._BASE_URL, output='extended')
-            s = resp[0]
-            cookie = resp[4]
-            referer = urllib.parse.urljoin(eurl, '/')
-            if episode:
-                esurl = re.findall(r'src="(/ajax/stats.js[^"]+)', s)[0]
-                esurl = urllib.parse.urljoin(eurl, esurl)
-                epage = database.get(client.request, 8, esurl, referer=eurl)
-                soup = BeautifulSoup(epage, "html.parser")
-                epurls = soup.find_all('a', {'class': 'playbutton'})
-                ep_not_found = True
-                for epurl in epurls:
-                    try:
-                        if int(epurl.text) == int(episode):
-                            ep_not_found = False
-                            epi_url = epurl.get('href')
-                            resp = database.get(client.request, 8, epi_url, referer=eurl, output='extended')
-                            cookie = resp[4]
-                            s = resp[0]
-                            break
-                    except:
-                        continue
-                if ep_not_found:
-                    return sources
-
-            csrf_token = re.search(r'name="csrf-token"\s*content="([^"]+)', s)
-            if csrf_token:
-                csrf_token = csrf_token.group(1)
-            else:
-                return sources
-            mlink = SoupStrainer('div', {'class': re.compile('sv_container$')})
-            mdiv = BeautifulSoup(s, "html.parser", parse_only=mlink)
-            mitems = mdiv.find_all('li')
-            for mitem in mitems:
-                if any(x in mitem.text.lower() for x in self.embeds()):
-                    type_ = 'direct'
-                    server = mitem.a.get('data-name')
-                    qual = mitem.a.get('title')
-                    if '1080p' in qual:
-                        qual = 3
-                    elif 'HD' in qual:
-                        qual = 2
-                    else:
-                        qual = 0
-                    lang = 3 if mitem.a.get('id').endswith('dub') else 2
-
-                    data = {
-                        'name_server': server,
-                        'data_play': mitem.a.get('data-play'),
-                        'id': mitem.a.get('data-id'),
-                        'server_id': mitem.a.get('data-serverid'),
-                        'expired': mitem.a.get('data-expired')
+        lang = 3 if slug[-3:] == 'dub' else 2
+        slug_url = urllib.parse.urljoin(self._BASE_URL, slug)
+        r = database.get(client.request, 8, slug_url, referer=self._BASE_URL)
+        eplist = re.search(r'<div\s*id="epslistplace".+?>([^<]+)', r)
+        if eplist:
+            eplist = json.loads(eplist.group(1).strip())
+            ep = str(int(episode) - 1)
+            if ep in eplist.keys():
+                referer = 'https://bunnycdn.to/'
+                esurl = "https://bunnycdn.to/api/play_int?id=cW9" + (base64.b64encode((eplist.get(ep).split('id=')[-1] + "LTXs3GrU8we9O").encode('latin-1'))).decode('latin-1')
+                epage = database.get(client.request, 8, esurl, referer=self._BASE_URL)
+                src = re.search(r'<source.+?src="([^"]+)', epage)
+                if src:
+                    # embeds_list = self.embeds()
+                    # if 'bunny' in embeds_list:
+                    #     server = 'bunny'
+                    server = 'bunny'
+                    source = {
+                        'release_title': '{0} Ep{1}'.format(title, episode),
+                        'hash': src.group(1) + '|Referer={0}&Origin={1}&User-Agent=iPad'.format(referer, referer[:-1]),
+                        'type': 'direct',
+                        'quality': 2,
+                        'debrid_provider': '',
+                        'provider': 'animix',
+                        'size': 'NA',
+                        'seeders': 0,
+                        'byte_size': 0,
+                        'info': [server + (' SUB' if lang == 2 else ' DUB')],
+                        'lang': lang,
+                        'channel': 3,
+                        'sub': 1
                     }
-                    headers = {
-                        'Origin': referer[:-1],
-                        'X-CSRF-TOKEN': csrf_token
-                    }
-                    r = client.request(
-                        urllib.parse.urljoin(eurl, '/ajax/embed'),
-                        post=data,
-                        headers=headers,
-                        XHR=True,
-                        referer=eurl,
-                        cookie=cookie
-                    )
 
-                    matches = re.findall(r'<iframe.+?src="([^"]+)', r)
-                    if matches:
-                        embed_url = urllib.parse.urljoin(eurl, matches[0])
-                        subs = ''
-                        slink = ''
-                        s = client.request(embed_url, referer=eurl)
+                    sources.append(source)
 
-                        if isinstance(s, str):
-                            sdiv = re.search(r'<source.+?src="([^"]+)', s)
-                            if sdiv:
-                                slink = sdiv.group(1)
-                            else:
-                                sdiv = re.search(r'sources:.+?file:\s*"([^"]+)', s, re.DOTALL)
-                                if sdiv:
-                                    slink = sdiv.group(1)
-                            subdiv = re.search(r'captions:\s*\[.+?file:\s*"([^"]+)', s, re.DOTALL)
-                            if subdiv:
-                                subs = subdiv.group(1)
-
-                            if slink:
-                                source = {
-                                    'release_title': '{0} - Ep {1}'.format(title, episode),
-                                    'hash': slink,  # + '|Referer={0}&Origin={1}&User-Agent=iPad'.format(referer, referer[:-1]),
-                                    'type': type_,
-                                    'quality': qual,
-                                    'debrid_provider': '',
-                                    'provider': 'animix',
-                                    'size': 'NA',
-                                    'seeders': 0,
-                                    'byte_size': 0,
-                                    'info': [server, 'DUB' if lang == 2 else 'SUB'],
-                                    'lang': lang,
-                                    'channel': 3,
-                                    'sub': 1
-                                }
-
-                                if subs:
-                                    source.update({'subs': [{'url': subs, 'lang': 'English'}]})
-
-                                sources.append(source)
-
-                    return sources
+        return sources
