@@ -1,3 +1,6 @@
+Changelog v5.1.89 (2025-04-04):
+- Added Animixplay
+
 Changelog v5.1.88 (2025-04-03):
 - Optimized Filtering Code
 
